@@ -7,13 +7,14 @@ import com.flash21.caddycom.entity.caddy.HouseCaddy;
 import com.flash21.caddycom.entity.golfField.GolfField;
 import com.flash21.caddycom.entity.schedule.Assignment;
 import com.flash21.caddycom.entity.schedule.AssignmentStatus;
+import com.flash21.caddycom.entity.schedule.DateStatus;
 import com.flash21.caddycom.entity.schedule.Schedule;
 import com.flash21.caddycom.repository.caddy.HouseCaddyRepository;
 import com.flash21.caddycom.repository.golfField.GolfFieldRepository;
 import com.flash21.caddycom.repository.schedule.AssignmentQueryFactory;
 import com.flash21.caddycom.repository.schedule.AssignmentRepository;
-import com.flash21.caddycom.repository.schedule.ScheduleRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -25,7 +26,10 @@ import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.Set;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class AssignmentCaddyService {
@@ -33,7 +37,6 @@ public class AssignmentCaddyService {
     private final AssignmentRepository assignmentRepository;
     private final HouseCaddyRepository houseCaddyRepository;
     private final AssignmentQueryFactory assignmentQueryFactory;
-    private final ScheduleRepository scheduleRepository;
     private final GolfFieldRepository golfFieldRepository;
 
     /**
@@ -123,13 +126,16 @@ public class AssignmentCaddyService {
                 .orElseThrow(() -> new NoSuchElementException("존재하지 않는 골프장입니다."));
 
         //스케줄 검증
-        List<Schedule> findSchedules = scheduleRepository.findAllByGolfFieldIdAndReservationAtFetchJoin(golfFieldId, date);
-        if (findSchedules.isEmpty()) {
+        List<Schedule> findSchedules = assignmentQueryFactory.findAllByGolfFieldIdAndReservationAtFetchJoinAssignmentAndHouseCaddy(golfFieldId, date);
+
+        boolean invalidScheduleExists = findSchedules.stream()
+                .anyMatch(findSchedule -> findSchedule.getDateStatus() != DateStatus.SETTING);
+        if (findSchedules.isEmpty() || invalidScheduleExists) {
             throw new NoSuchElementException("존재하지 않는 스케줄입니다.");
         }
 
         //오늘의 요일 변환
-        Days todaysDayOfWeek = getDays(date.plusDays(5));
+        Days todaysDayOfWeek = getDays(date);
 
         //배정 검증
         List<Assignment> findAssignments = getAllAssignmentsSortByTime(findSchedules);
@@ -139,48 +145,109 @@ public class AssignmentCaddyService {
 
         //캐디 검증
         List<HouseCaddy> findCaddies = houseCaddyRepository.findAllByGolfFieldIdSortById(golfFieldId);
+
         if (findCaddies.isEmpty()) {
             throw new NoSuchElementException("캐디가 존재하지 않습니다.");
         }
 
+        Set<Long> blockedCaddyIds = getBlockedHouseCaddies(findAssignments);
+
         int caddySize = findCaddies.size();
-        int currentCaddyIndex = 0;
-        Long recentlyAssignedCaddyId = null;
+        int currentCaddyIndex = getStartIndex(findGolfField, caddySize, findCaddies);
+
+        System.out.println("시작 인덱스는 " + currentCaddyIndex);
+        HouseCaddy houseCaddy = findCaddies.get(currentCaddyIndex);
+        System.out.println("첫 배정 시작 인원은 " + houseCaddy.getName());
+        System.out.println(todaysDayOfWeek.name() + "요일 기준으로 배정");
 
         for (Assignment assignment : findAssignments) {
             boolean isAssigned = false;
 
-            if (assignment.getStatus() == AssignmentStatus.BLOCKED) continue;
+            AssignmentStatus status = assignment.getStatus();
+            if (assignment.getStatus() == AssignmentStatus.BLOCKED || status == AssignmentStatus.ASSIGNED) continue;
 
             while (!isAssigned) {
 
                 HouseCaddy currentCaddy = findCaddies.get(currentCaddyIndex);
-                if (verifyCaddy(assignment, currentCaddy, todaysDayOfWeek)) {
+                if (isAlreadyAssigned(blockedCaddyIds, currentCaddy) && isAvailable(assignment, currentCaddy, todaysDayOfWeek)) {
                     assignment.assignCaddy(currentCaddy);
-                    System.out.println("배정된 캐디 이름: " + currentCaddy.getName() + " 캐디 ID: " + currentCaddy.getId() + " 배정 Id: " + assignment.getId());
+                    System.out.printf("❗❗" + assignment.getSchedule().getCourse().getName() + "코스 "
+                            + assignment.getStartTime() + "은 -> ID(" + currentCaddy.getId() + ") "
+                            + currentCaddy.getName() + "가 배정 됨❗❗️\n");
                     isAssigned = true;
-                    recentlyAssignedCaddyId = currentCaddy.getId();
                 }
 
                 currentCaddyIndex = (currentCaddyIndex + 1) % caddySize;
             }
         }
 
-        findGolfField.changeCaddyAssignCursor(recentlyAssignedCaddyId);
+        findGolfField.changeCaddyAssignCursor(findCaddies.get(currentCaddyIndex).getId());
+        findSchedules.forEach(fs -> fs.changeDateStatus(DateStatus.ASSIGNED));
+    }
+
+    private int getStartIndex(GolfField findGolfField, int caddySize, List<HouseCaddy> findCaddies) {
+
+        if (findGolfField.getCaddyAssignCursor() == null) return 0;
+
+        Long cursor = findGolfField.getCaddyAssignCursor();
+        int index = -1;
+        for (int i = 0; i < caddySize; i++) {
+            if (findCaddies.get(i).getId().equals(cursor)) {
+                index = i;
+                break;
+            } else if (findCaddies.get(i).getId() > cursor) {
+                index = i;
+                break;
+            }
+        }
+
+        return (index == -1) ? 0 : index;
+    }
+
+    private boolean isAlreadyAssigned(Set<Long> blockedCaddyIds, HouseCaddy currentCaddy) {
+        boolean b = !blockedCaddyIds.contains(currentCaddy.getId());
+        if (!b) {
+            System.out.println(currentCaddy.getId() + " " + currentCaddy.getName() + "는 블락에 배정되었으므로 배정이 불가능함");
+        }
+        return b;
     }
 
     private List<Assignment> getAllAssignmentsSortByTime(List<Schedule> findSchedules) {
         return findSchedules.stream()
                 .flatMap(schedule -> schedule.getAssignments().stream())
+                .filter(assignment -> assignment.getStatus() == AssignmentStatus.NOTHING || assignment.getStatus() == AssignmentStatus.BLOCKED)
                 .sorted(Comparator.comparing(Assignment::getStartTime))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private boolean verifyCaddy(Assignment assignment, HouseCaddy currentCaddy, Days todaysDayOfWeek) {
-        boolean isHoliday = currentCaddy.getHoliday() == null || !currentCaddy.getHoliday().contains(todaysDayOfWeek);
+    private Set<Long> getBlockedHouseCaddies(List<Assignment> findSchedules) {
+        return findSchedules.stream()
+                .filter(assignment -> assignment.getStatus() == AssignmentStatus.BLOCKED && assignment.getHouseCaddy() != null)
+                .map(Assignment::getHouseCaddy)
+                .map(HouseCaddy::getId)
+                .collect(Collectors.toSet());
+    }
+
+    private boolean isAvailable(Assignment assignment, HouseCaddy currentCaddy, Days todaysDayOfWeek) {
+        boolean isWorkDay = currentCaddy.getHoliday() == null || !currentCaddy.getHoliday().contains(todaysDayOfWeek);
         boolean isOffPart = currentCaddy.getOffPart() == null || !currentCaddy.getOffPart().contains(assignment.getSchedule().getPart());
 
-        return isHoliday && isOffPart;
+
+        if (!isWorkDay) {
+            System.out.print("ID(" + currentCaddy.getId() + ") " + currentCaddy.getName() + "는 " + todaysDayOfWeek + "에 휴일이므로 ");
+            if (isOffPart) {
+                System.out.println("배정이 불가능함");
+            }
+        }
+        if (!isOffPart) {
+            if (isWorkDay) {
+                System.out.print("ID(" + currentCaddy.getId() + " " + currentCaddy.getName() + "는 휴일이 아니지만 오프 파트이므로 배정이 불가능함\n");
+            } else {
+                System.out.print("또한 오프 파트이므로 배정이 불가능함\n");
+            }
+        }
+
+        return isWorkDay && isOffPart;
     }
 
 
